add_executable(example_DOMStyle example_DOMStyle.cc)
target_link_libraries(example_DOMStyle goa-json)

add_executable(example_SAXStyle example_SAXStyle.cc)
target_link_libraries(example_SAXStyle goa-json)

add_executable(example_generateJSON example_generateJSON.cc)
target_link_libraries(example_generateJSON goa-json)